lintian (2.5.20) UNRELEASED; urgency=low

  XXX: generate tag summary with private/generate-tag-summary

  * checks/cruft.{desc,pm}:
    + [BR] Check files for under a non-distributable Nvidia
      license.  (Closes: #724930)
    + [BR] Abstract sliding window algorithm and use it for
      license check.  (Closes: #720348)
  * checks/fields.pm:
    + [SL] Returns a warning when a package build-deps on java-compiler
      instead of default-jdk.  (Closes: #730714)
  * checks/files.desc
    + [BR] Improve description of pkg-config-multi-arch-wrong-dir
      tag. Add debhelper > 9 on non multi-arched package as a likely
      cause (Closes: #723886).
  * checks/scripts.{desc,pm}:
    + [BR] Detect update-alternatives --set in maintainer scripts.
      (Closes: #643602).
    + [BR] Use Lintian::Data for bad shell construction in maintainer
      scripts.
    + [BR] Detect use of adduser --system without --home or with
      --home inside /home.  (Closes: #730456).
  * checks/watch.{desc,pm}:
    + [BR] Detect lack of uscan support for gpg signature.
      (Closes: #711553).

  * data/binary/embedded-libs:
    + [RG] Detect embedded copies of poppler/xpdf.  (Closes: #724733)
  * data/fields/obsolete-packages:
    + [NT] Apply patch from Eric Dorland to mark various versions
      of automake as obsolete.
    + [SL] Tag openjdk-6-jdk, openjdk-6-jre and openjdk-6-jre-headless
      as obsolete (See ##720911).  (Closes: #730714)
  * data/fields/virtual-packages:
    + [NT] Refresh against sid.  Thanks to Nicholas Breen for the
      reminder.  (Closes: #724866)
  * data/spelling/corrections:
    + [RG] Detect some typos of "establishment" and "contains".
    + [SL] Detect some typos of "suppress".
  * data/standards-version/release-dates:
    + [NT] Add release date for 3.9.5.

  * debian/control:
    + [NT] Bump Standards-Versions to 3.9.5 - no changes required.

  * lib/Lintian/Check.pm:
    + [RG] Detect a few more spelling mistakes by removing some