@@ -1,0 +1,9 @@
+<html>
+<body>
+<!-- Permission is granted to copy, distribute and/or modify this document -->
+<!-- under the terms of the GNU Free Documentation License, Version 1.3 or -->
+<!-- any later version published by the Free Software Foundation;  with no -->
+<!-- Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts. -->
+<!-- a copy of the license is included under /home -->
+</body>
+</html>
