@@ -4,3 +4,4 @@
 .\" under the terms of the GNU Free Documentation License, Version 1.3 or
 .\" any later version published by the Free Software Foundation;  with no
 .\" Invariant Sections, no Front-Cover Texts, and no Back-Cover Texts.
+.\" A copy of the license is included below.
